--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,10 @@
 *.swo
 
 # Directories
-/local/*
-/plugin/*
-/tmp/*
-/userfiles/*
+/local
+/plugin
+/tmp
+/userfiles
 /.well-known
 
 # Files
@@ -18,3 +18,6 @@
 /favicon.ico
 /robots.txt
 /cnf/config.ini
+
+# Content
+/userfiles/*
