local phpunit infrastructure

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,6 @@ sitemap-*.txt
 sitemap-*.xml
 .phpunit.result.cache
 
-# Ignoring generated composer files
+# Generated composer file (base file should be committed)
 composer.json
-composer.lock
 
